# FACTRADE-solana

./: .env.example  .gitignore  COMPLETE_DEPLOYMENT_GUIDE.md  CUSTOM_DOMAIN_HOSTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEVNET_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  INTEGRATION_COMPLETE.md  README.md  STRATEGIC_PLAN_A_PLUS_B.md  STRATEGIC_ROADMAP.md  TAX_AND_REFERRAL_SYSTEM.md  TESTING_DEPLOYMENT_GUIDE.md  TOKENOMICS_SPECIFICATION.md  VERCEL_AUTO_DEPLOY.md  package-lock.json  package.json  tsconfig.scripts.json
app/: globals.css  layout.tsx  page.tsx
app/components/: CursorTracker.tsx  GovernanceInterface.tsx  LaunchpadInterface.tsx  ReferralDashboard.tsx  RewardsInterface.tsx  SolanaProvider.tsx  SoundEffects.tsx  StakingInterface.tsx  TaxDashboard.tsx  TokenInfo.tsx  WalletConnectButton.tsx
app/utils/: blockchain-sync.ts  program-integration.ts
docs/: BACKEND_SPECIFICATION.md
programs/factrade-token/: token-config.ts  tokenomics.json
scripts/: README.md  deploy-all.sh  deploy-token.ts  distribute-tokens.ts  initialize-programs.ts
solana-programs/: Anchor.toml  Cargo.toml
solana-programs/governance/: Cargo.toml
solana-programs/governance/src/: lib.rs
solana-programs/referral-rewards/: Cargo.toml
solana-programs/referral-rewards/src/: lib.rs
solana-programs/rewards/: Cargo.toml
solana-programs/rewards/src/: lib.rs
solana-programs/staking/: Cargo.toml
solana-programs/staking/src/: lib.rs
solana-programs/tax-distribution/: Cargo.toml
solana-programs/tax-distribution/src/: lib.rs
